--- a/.qmlls.ini
+++ b/.qmlls.ini
@@ -1,5 +1,5 @@
 [General]
-buildDir="C:/Users/andri/Documents/GitHub/stock_market_app/build/Desktop_Qt_6_10_0_MinGW_64_bit-Debug"
+buildDir="C:/Users/andri/Documents/GitHub/stock_market_app/build/Android_Qt_6_9_1_Clang_arm64_v8a-Debug"
 no-cmake-calls=false
-docDir=C:/Qt/Docs/Qt-6.10.0
-importPaths="C:/Qt/6.10.0/mingw_64/qml"
+docDir=C:/Qt/Docs/Qt-6.9.1
+importPaths="C:/Qt/6.9.1/android_arm64_v8a/qml"
