SDK lib make fill from EOD fundamental

--- a/sdk/CMakeLists.txt
+++ b/sdk/CMakeLists.txt
@@ -3,7 +3,8 @@ project(sdk)
 
 # app -------------------------------------------------------------------------
 set (sdk_h
-    source/api/api.cpp include/api/api.h
+    include/sdk.h
+    include/api/api.h
     include/api/alphavantage.h
     include/api/eod.h
     include/api/figi.h
@@ -13,6 +14,28 @@ set (sdk_h
     include/api/twelvedata.h
     include/api/marketstack.h
     include/api/filefetch.h
+
+    include/instrument/trend.h
+    include/instrument/earnings.h
+    include/instrument/quartel_data.h
+    include/instrument/incomes.h
+    include/instrument/cash_flow.h
+    include/instrument/balance.h
+    include/instrument/quotes.h
+    include/instrument/short_interest.h
+    include/instrument/ticker.h
+    include/instrument/valuation.h
+    include/instrument/capital.h
+    include/instrument/corporate_action.h
+    include/instrument/dividend.h
+    include/instrument/estimate.h
+    include/instrument/fundamental.h
+    include/instrument/instrument.h
+    include/instrument/legal.h
+    include/instrument/meta.h
+    include/instrument/finance.h
+    include/instrument/symbol.h
+    include/instrument/isin.h
 
     include/data/market.h
 
@@ -24,7 +47,6 @@ set (sdk_h
     include/data/instrument/dividend.h
     include/data/instrument/identity.h
     include/data/instrument/profitability.h
-    include/data/instrument/symbol.h
     include/data/instrument/shares.h
     include/data/instrument/earnings.h
     include/data/instrument/balance.h
@@ -42,11 +64,13 @@ set (sdk_h
     include/utilities/define.h
     include/utilities/res_dir.h
     include/utilities/features.h
+    include/utilities/trackable.h
 
     include/loader.h
 )
 
 set (sdk_cpp
+    source/api/api.cpp
     source/api/alphavantage.cpp
     source/api/eod.cpp
     source/api/figi.cpp
@@ -56,6 +80,28 @@ set (sdk_cpp
     source/api/twelvedata.cpp
     source/api/marketstack.cpp
     source/api/filefetch.cpp
+
+    source/instrument/trend.cpp
+    source/instrument/earnings.cpp
+    source/instrument/quartel_data.cpp
+    source/instrument/incomes.cpp
+    source/instrument/cash_flow.cpp
+    source/instrument/balance.cpp
+    source/instrument/legal.cpp
+    source/instrument/meta.cpp
+    source/instrument/quotes.cpp
+    source/instrument/short_interest.cpp
+    source/instrument/ticker.cpp
+    source/instrument/valuation.cpp
+    source/instrument/capital.cpp
+    source/instrument/corporate_action.cpp
+    source/instrument/dividend.cpp
+    source/instrument/estimate.cpp
+    source/instrument/fundamental.cpp
+    source/instrument/instrument.cpp
+    source/instrument/finance.cpp
+    source/instrument/symbol.cpp
+    source/instrument/isin.cpp
 
     source/data/market.cpp
 
@@ -67,7 +113,6 @@ set (sdk_cpp
     source/data/instrument/dividend.cpp
     source/data/instrument/identity.cpp
     source/data/instrument/profitability.cpp
-    source/data/instrument/symbol.cpp
     source/data/instrument/shares.cpp
     source/data/instrument/earnings.cpp
     source/data/instrument/balance.cpp
@@ -89,6 +134,7 @@ set (sdk_cpp
 
     source/utilities/res_dir.cpp
     source/utilities/features.cpp
+    source/utilities/trackable.cpp
 
     source/loader.cpp
 )
