--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,13 @@ find_package (Qt6 REQUIRED COMPONENTS
 )
 
 set (Qt_lib_core  Qt6::Core   Qt6::Network         Qt6::WebSockets)
-set (Qt_lib_gui   Qt6::Gui    Qt6::Widgets         Qt6::Svg)
-set (Qt_lib_quick Qt6::Qml    Qt6::QuickControls2  Qt6::Quick)
+set (Qt_lib_gui   Qt6::Gui    Qt6::Svg)
+set (Qt_lib_quick Qt6::Qml    Qt6::QuickControls2  Qt6::Quick Qt6::Widgets)
 set (Qt_libs ${Qt_lib_core} ${Qt_lib_gui} ${Qt_lib_quick})
 
-# add_subdirectory(client)
 add_subdirectory(sdk)
-# add_subdirectory(server)
+add_subdirectory(client)
+add_subdirectory(server)
 
 
 # # ---------------------------- Unit test project ----------------------------------------
